# fastapi-modern-toolchain-template

./: .env.example  .gitignore  Makefile  README.md  justfile  pyproject.toml  ruff.toml  run-sonar.sh  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
tests/: test_main.py
